# langgraph-kodi-companion

./: .gitignore  README.md  pixi.toml
agent/: .env.example  README.md  pyproject.toml
agent/src/agent/: config.py  graph.py  llm.py  main.py  tools.py
client/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: index.css
client/src/api/: langgraph.ts
client/src/components/: ChatInput.tsx  ChatPage.tsx  LoadingIndicator.tsx  MessageBubble.tsx
client/src/types/: index.ts
openspec/changes/add-langgraph-mcp-agent/: tasks.md
openspec/changes/add-to-watchlist-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-03-add-langgraph-mcp-agent/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-04-agent-automated-download/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-04-kod-bot-chat-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-04-qbittorrent-download-integration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-split-download-tools-tv-movie/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-stream-llm-tokens-to-client/: design.md  proposal.md  tasks.md
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/src/: config.ts  index.ts  mcp.ts
server/src/tools/: completed_downloads.ts  media_library.ts  movie.ts  qbittorrent.ts  series.ts  watchlist.ts  watchlist_add.ts
server/test/: tools.test.ts
(+22 files in other folders)
