[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ketchup", email = "mrdjan.stajic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.9.7",
    "tavily-python>=0.5.0",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.30",
]
